--- a/case/index.html
+++ b/case/index.html
@@ -11,11 +11,32 @@
 </head>
 <body>
   <div class="contain">
-    <header></header>
+    <div class="header"></div>
 
     <div class="main">
-      <div class="aside"></div>
-      <div class="inner"></div>
+      <ul class="aside">
+        <li>列表1</li>
+        <li>列表2</li>
+        <li>列表3</li>
+        <li>列表4</li>
+        <li>列表5</li>
+        <li>列表6</li>
+      </ul>
+
+      <ul class="images">
+        <li>图片1</li>
+        <li>图片2</li>
+        <li>图片3</li>
+        <li>图片4</li>
+        <li>图片5</li>
+        <li>图片6</li>
+        <li>图片7</li>
+        <li>图片8</li>
+        <li>图片9</li>
+        <li>图片10</li>
+        <li>图片11</li>
+        <li>图片12</li>
+      </ul>
     </div>
   </div>
 </body>
